--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,6 +39,8 @@ services:
     image: python:3.11-slim
     container_name: kaggle-bridge
     env_file: .env
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
     
     # Optional persistent downloads dir:
     volumes:
@@ -50,6 +52,9 @@ services:
       - -lc
       - >
         set -euo pipefail &&
+        export http_proxy="${PROXY_SERVER:-}"; export https_proxy="${PROXY_SERVER:-}";
+        export HTTP_PROXY="$http_proxy"; export HTTPS_PROXY="$https_proxy";
+        export no_proxy="${PROXY_BYPASS:-localhost,127.0.0.1}"; export NO_PROXY="$no_proxy";
         apt-get update &&
         apt-get install -y --no-install-recommends git ca-certificates &&
         rm -rf /var/lib/apt/lists/* &&
@@ -78,7 +83,13 @@ services:
     image: supercorp/supergateway:latest
     container_name: gistpad-bridge
     env_file: .env
-    # ไม่ต้องเปิด port ออกนอกเครื่อง ให้ gateway เข้าหาด้วยชื่อ service
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
+    environment:
+      # ตั้งค่าพร็อกซีถ้าจำเป็น (เปลี่ยนตาม .env หรือกำหนดเอง)
+      HTTP_PROXY: ${PROXY_SERVER}
+      HTTPS_PROXY: ${PROXY_SERVER}
+      NO_PROXY: ${PROXY_BYPASS}
     expose:
       - "9010"
     # ใช้ entrypoint ของภาพ supergateway แล้วส่ง args เข้าไปเลย
@@ -105,15 +116,17 @@ services:
     image: python:3.11-slim
     container_name: mssql-bridge
     env_file: .env
-    # ถ้าต้องการให้ container นี้เรียกฐานข้อมูลบนเครื่อง host (Linux) ผ่านชื่อ host.docker.internal:
-    # extra_hosts:
-    #   - "host.docker.internal:host-gateway"
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
 
     command:
       - bash
       - -lc
       - |
         set -euo pipefail
+        export http_proxy="${PROXY_SERVER:-}"; export https_proxy="${PROXY_SERVER:-}";
+        export HTTP_PROXY="$http_proxy"; export HTTPS_PROXY="$https_proxy";
+        export no_proxy="${PROXY_BYPASS:-localhost,127.0.0.1}"; export NO_PROXY="$no_proxy";
         export DEBIAN_FRONTEND=noninteractive
         apt-get update
         apt-get install -y --no-install-recommends ca-certificates gcc g++ unixodbc-dev curl
@@ -169,7 +182,14 @@ services:
   context7-bridge:
     image: supercorp/supergateway:latest
     container_name: context7-bridge
-    env_file: .env          
+    env_file: .env
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
+    environment:
+      HTTP_PROXY: ${PROXY_SERVER}
+      HTTPS_PROXY: ${PROXY_SERVER}
+      NO_PROXY: ${PROXY_BYPASS}
+      
     expose:
       - "9030"
     command:
@@ -193,6 +213,8 @@ services:
     image: mcr.microsoft.com/playwright:v1.56.1-noble   # Official image with browsers & deps
     container_name: playwright-bridge
     env_file: .env
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
     # Optional: persist outputs (videos/traces/pdf/screenshots) to host
     volumes:
       - ./playwright-data:/data
@@ -202,12 +224,20 @@ services:
       - -lc
       - >
         set -euo pipefail &&
+        export http_proxy="${PROXY_SERVER:-}"; export https_proxy="${PROXY_SERVER:-}";
+        export HTTP_PROXY="$http_proxy"; export HTTPS_PROXY="$https_proxy";
+        export no_proxy="${PROXY_BYPASS:-localhost,127.0.0.1}"; export NO_PROXY="$no_proxy";
         apt-get update &&
         apt-get install -y --no-install-recommends python3 python3-venv ca-certificates curl &&
         rm -rf /var/lib/apt/lists/* &&
         python3 -m venv /venv &&
         /venv/bin/python -m pip install --no-cache-dir mcp-contextforge-gateway &&
-        /venv/bin/python -m mcpgateway.translate --stdio "npx -y @playwright/mcp@latest --headless --browser=chromium --no-sandbox --output-dir=/data --allowed-hosts=*" --expose-sse --host 0.0.0.0 --port 9040
+        ARGS="--headless --browser=chromium --no-sandbox --output-dir=/data --allowed-hosts=*";
+        [ -n "${PROXY_SERVER:-}" ] && ARGS="$ARGS --proxy-server=${PROXY_SERVER}";
+        [ -n "${PROXY_BYPASS:-}" ] && ARGS="$ARGS --proxy-bypass=${PROXY_BYPASS}";
+        echo "[playwright-bridge] args: $ARGS";
+        /venv/bin/python -m mcpgateway.translate --stdio "npx -y @playwright/mcp@latest $ARGS" --expose-sse --host 0.0.0.0 --port 9040
+
     expose:
       - "9040"
     restart: unless-stopped
