edit .env.example PROXY

--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,7 @@ MSSQL_PORT=
 
 # ---- CONTEXT7 ----
 CONTEXT7_API_KEY=
+
+# ---- PROXY ----
+PROXY_SERVER=http://host.docker.internal:3128
+PROXY_BYPASS=localhost,127.0.0.1,mcp-gateway,playwright-bridge,kaggle-bridge,gistpad-bridge,context7-bridge,mssql-bridge,10.0.0.0/8,172.16.0.0/12,192.168.0.0/16
