--- a/compose/compose.core.yml
+++ b/compose/compose.core.yml
@@ -12,7 +12,7 @@ x-common-variables: &common-variables
 
 # Common health check configuration
 x-health-check: &health-check
-  interval: ${HEALTH_CHECK_INTERVAL:-30s}
+  interval: ${HEALTH_CHECK_INTERVAL:-30}s
   timeout: 10s
   retries: 3
   start_period: 40s
