--- a/compose/compose.browser.yml
+++ b/compose/compose.browser.yml
@@ -20,7 +20,7 @@ x-bridge-config: &bridge-config
 
 # Common health check configuration
 x-health-check: &health-check
-  interval: ${HEALTH_CHECK_INTERVAL:-30s}
+  interval: ${HEALTH_CHECK_INTERVAL:-30}s
   timeout: 10s
   retries: 3
   start_period: 40s
@@ -40,7 +40,7 @@ services:
   playwright-bridge:
     image: mcr.microsoft.com/playwright:v1.56.1-noble
     container_name: playwright-bridge
-    env_file: .env
+    env_file: ../.env
     
     # Use common bridge configuration
     <<: *bridge-config
