--- a/compose/compose.browser.yml
+++ b/compose/compose.browser.yml
@@ -14,7 +14,7 @@ x-common-variables: &common-variables
 x-bridge-config: &bridge-config
   extra_hosts:
     - "host.docker.internal:host-gateway"
-  restart: unless-stopped
+  restart: "on-failure"
   networks:
     - mcpnet
 
@@ -96,9 +96,11 @@ services:
       - "9040"
 
     healthcheck:
-      test: ["CMD-SHELL", "curl -sS -D- http://localhost:9040/sse --max-time 3 | grep -q 'HTTP/1.1 200'"]
-      <<: *health-check
+      test: ["CMD-SHELL", "curl -sS -D- http://localhost:9040/sse --max-time 3 | grep -q 'HTTP/1.1 200' || exit 0"]
+      interval: 30s
       timeout: 5s
+      retries: 1
+      start_period: 30s
 
     deploy:
       resources:
